Added description of fixed point maths

--- a/tex/latex/report.tex
+++ b/tex/latex/report.tex
@@ -60,7 +60,12 @@
 	\listoffigures
 	\listoftables
 	\lstlistoflistings
-	\listofsymbols{ll}{$w$ & The weight vector}
+	\listofsymbols{ll}
+	{
+		$w$ & The weight vector \\
+		$S$ & The scale factor of a fixed-point number \\
+		$B$ & The number of bits to shift a fixed-point number \\
+	}
 	%\acknowledgements{Thanks to no one.}
 	%\dedicatory{To \dots}
 	\mainmatter
