Added the title

--- a/tex/latex/report.tex
+++ b/tex/latex/report.tex
@@ -24,7 +24,7 @@
 %% ----------------------------------------------------------------
 \begin{document}
 	\frontmatter
-	\title{TEST TITLE}
+	\title{Ultra-Low-Power Exercise Monitoring Applications for Sub-Threshold Micro-Controllers}
 	\authors    {\\ \texorpdfstring
 		{\href{mailto:djap1g11@ecs.soton.ac.uk}{Daniel J. A. Playle}}
 		{Daniel J. A. Playle}
