--- a/tex/latex/report.tex
+++ b/tex/latex/report.tex
@@ -5,6 +5,7 @@
 \graphicspath{{../Figures/}}   % Location of your graphics files
 \usepackage{natbib}            % Use Natbib style for the refs.
 \usepackage{array}
+\usepackage{listings}
 \usepackage{pdflscape}
 \usepackage{pgfgantt}
 \usepackage{pgfplots}
@@ -107,6 +108,6 @@
 	%
 	\backmatter
 	\bibliographystyle{../../bibtex/bst/ecsdocs/ecs}
-	\bibliography{bib}
+	\bibliography{ECS}
 \end{document}
 %% ----------------------------------------------------------------
