--- a/tex/latex/report.tex
+++ b/tex/latex/report.tex
@@ -14,6 +14,7 @@
 \usepackage{todonotes}
 \usepackage{tikz}
 \usetikzlibrary{automata,positioning}
+\lstset{language=C}
 
 \hypersetup{colorlinks=true}   % Set to false for black/white printing
 %\input{Definitions}            % Include your abbreviations
