--- a/tex/latex/ECS.bib
+++ b/tex/latex/ECS.bib
@@ -43,3 +43,15 @@ Discusses using SVMs on phones and the challenges of doing so
 	year={2012},
 	publisher={Springer}
 }
+
+Discusses the workings of MLPs
+@article{baum1988capabilities,
+	title={On the capabilities of multilayer perceptrons},
+	author={Baum, Eric B},
+	journal={Journal of complexity},
+	volume={4},
+	number={3},
+	pages={193--215},
+	year={1988},
+	publisher={Elsevier}
+}
