Adds names for some hardware section and makes a start on writing the sensor section

--- a/tex/latex/report.tex
+++ b/tex/latex/report.tex
@@ -87,6 +87,7 @@
 	\input{hardware/research}
 	\input{hardware/fpga}
 	\input{hardware/mbed}
+	\input{hardware/sensor}
 
 	% User study chapter
 	\input{study/study}
