Add some ML stuff

--- a/tex/latex/ECS.bib
+++ b/tex/latex/ECS.bib
@@ -55,3 +55,34 @@ Discusses the workings of MLPs
 	year={1988},
 	publisher={Elsevier}
 }
+
+Original military paper describing RBFNs
+@techreport{broomhead1988radial,
+	title={Radial basis functions, multi-variable functional interpolation and adaptive networks},
+	author={Broomhead, David S and Lowe, David},
+	year={1988},
+	institution={DTIC Document}
+}
+
+Curse of dimensionality was defined in this book
+@book{bellman1957dynamic,
+	title={Dynamic Programming},
+	author={Bellman, R. and Rand Corporation},
+	isbn={9780691079516},
+	lccn={57005444},
+	series={Rand Corporation research study},
+	year={1957},
+	publisher={Princeton University Press}
+}
+
+Hughes effect
+@article{oommen2008objective,
+	title={An objective analysis of support vector machine based classification for remote sensing},
+	author={Oommen, Thomas and Misra, Debasmita and Twarakavi, Navin KC and Prakash, Anupma and Sahoo, Bhaskar and Bandopadhyay, Sukumar},
+	journal={Mathematical geosciences},
+	volume={40},
+	number={4},
+	pages={409--424},
+	year={2008},
+	publisher={Springer}
+}
