Adds notes on mbed and adds more to sensor

--- a/tex/latex/hardware/mbed.tex
+++ b/tex/latex/hardware/mbed.tex
@@ -2,3 +2,9 @@
 
 \note{What is mBed}
 \note{Why we chose mBed}
+\note{Serial communication - autobaud, python script}
+\note{I2C with sensor}
+\note{Receiving sensor data}
+\note{Configuring Watchdog Oscillator for main clock}
+\note{Use output pin in while loop due to clkout pin not on the mBed breakout}
+\note{I2C pulse and Watchdog setting to optimise sensor sampling rate}
