--- a/tex/latex/hardware/sensor.tex
+++ b/tex/latex/hardware/sensor.tex
@@ -6,3 +6,7 @@ The library available for the Xadow MPU6050 contains two separate classes, one w
 
 The libraries initially were written to be used with an Arduino which uses the Atmel chipset and hence interfaces with the Atmel libraries for I2C communication. Thus, the library was incompatible for an ARM processor. 
 
+To remedy this, the I2Cdev class was completely re-written to interface with the ARM I2C library instead of the Atmel. 
+
+\note{Talk about the issue with i2c\_stop() and i2c\_start()}
+
