Adds mbed notes and mbed datasheet

--- a/tex/latex/ECS.bib
+++ b/tex/latex/ECS.bib
@@ -86,3 +86,12 @@ Hughes effect
 	year={2008},
 	publisher={Springer}
 }
+
+Datasheet for mBed Cortex M0
+@MISC{mbed_datasheet,
+	author = {NXP},
+	year={2014},2
+	title = {User Manual for the {mBed LPC11U24}},
+	url = {http://www.nxp.com/documents/user_manual/UM10462.pdf},
+	note={Rev 5.3}
+}
