--- a/tex/latex/hardware/mbed.tex
+++ b/tex/latex/hardware/mbed.tex
@@ -1,5 +1,7 @@
 \namedsection{mBed}{Gupta}
 
+\cite{mbed_datasheet}
+
 \note{What is mBed}
 \note{Why we chose mBed}
 \note{Serial communication - autobaud, python script}
@@ -8,3 +10,5 @@
 \note{Configuring Watchdog Oscillator for main clock}
 \note{Use output pin in while loop due to clkout pin not on the mBed breakout}
 \note{I2C pulse and Watchdog setting to optimise sensor sampling rate}
+\note{SPI mBed library cannot be compiled because it is bigger than the flash memory}
+\note{Bitshifting gives random outputs fun}
