Add more on ML (including plots and tables)

--- a/tex/latex/ECS.bib
+++ b/tex/latex/ECS.bib
@@ -87,6 +87,15 @@ Hughes effect
 	publisher={Springer}
 }
 
+Curse of dimensionality doesn't affect time series
+@incollection{bernecker2011quality,
+	title={Quality of similarity rankings in time series},
+	author={Bernecker, Thomas and Houle, Michael E and Kriegel, Hans-Peter and Kr{\"o}ger, Peer and Renz, Matthias and Schubert, Erich and Zimek, Arthur},
+	booktitle={Advances in Spatial and Temporal Databases},
+	pages={422--440},
+	year={2011},
+	publisher={Springer}
+}
 Datasheet for mBed Cortex M0
 @MISC{mbed_datasheet,
 	author = {NXP},
