--- a/tex/latex/report.tex
+++ b/tex/latex/report.tex
@@ -11,6 +11,8 @@
 \usepackage{pgfplots}
 \usepackage{enumitem}       % For making numbered indent lists
 \usepackage{color}
+\usepackage{graphicx,subfigure}
+\usepackage{multirow}
 \usepackage{todonotes}
 \usepackage{tikz}
 \usetikzlibrary{automata,positioning}
