--- a/tex/latex/report.tex
+++ b/tex/latex/report.tex
@@ -21,6 +21,7 @@
 \hypersetup{colorlinks=true}   % Set to false for black/white printing
 %\input{Definitions}            % Include your abbreviations
 \newcommand{\namedsection}[2]{\section[#1]{#1 \hfill {\small \color{gray} #2}}} % Use this to create sections with authorship: \namedsection{Section Name}{Your name}
+\newcommand{\namedsubsection}[2]{\subsection[#1]{#1 \hfill {\small \color{gray} #2}}} % Use this to create subsections with authorship: \namedsubsection{Section Name}{Your name}
 
 \newcommand{\note}[1]{\todo[inline]{#1}}
 
