Change my name to be in style

--- a/tex/latex/report.tex
+++ b/tex/latex/report.tex
@@ -31,7 +31,7 @@
 	\frontmatter
 	\title{Ultra-Low-Power Exercise Monitoring Applications for Sub-Threshold Micro-Controllers}
 	\authors    {\\ \texorpdfstring
-		{\href{mailto:djap1g11@ecs.soton.ac.uk}{Daniel J. A. Playle}}
+		{\href{mailto:djap1g11@ecs.soton.ac.uk}{Daniel Playle}}
 		{Daniel J. A. Playle}
 		\\
 		\texorpdfstring
