Adds basic mBed introduction

--- a/tex/latex/ECS.bib
+++ b/tex/latex/ECS.bib
@@ -99,8 +99,15 @@ Curse of dimensionality doesn't affect time series
 Datasheet for mBed Cortex M0
 @MISC{mbed_datasheet,
 	author = {NXP},
-	year={2014},2
+	year={2014},
 	title = {User Manual for the {mBed LPC11U24}},
 	url = {http://www.nxp.com/documents/user_manual/UM10462.pdf},
 	note={Rev 5.3}
+}
+
+mBed website
+@MISC{mbed_website,
+	author = {mBed},
+	title = {{mBed Developer Website}},
+	url ={https://developer.mbed.org/handbook/mbed-Microcontrollers}
 }
