--- a/tex/latex/hardware/mbed.tex
+++ b/tex/latex/hardware/mbed.tex
@@ -1,6 +1,10 @@
 \namedsection{mBed}{Gupta}
 
-\cite{mbed_datasheet}
+\subsection{Introduction}
+
+mBed is a platform which implements ARM 32-bit processors within micro-controllers which is primarily developed by ARM. They are of the DIP form factor with 40 pins. It features an online SDK allowing for the development of projects online. It permits code to be written online as well as compiled into a binary compatible with the board being used. This binary can then be downloaded removing the pre-requisite of having the ARM toolchain available locally. The manner of uploading to the mBed is relatively straight forward with the presence of the mBed interface. \cite{mbed_website}
+
+This interface exposes a Mass Storage device to the host computer via a USB connection allowing for binaries to be uploaded in a drag and drop manner. The interface is also connected with the target chip using a JTAG connection allowing for it to program its flash memory. When the reset button is pressed, the interface checks the storage for the newest binary file and, should it not be programmed within the device already, will program the binary provided into the flash memory of the chip. \cite{mbed_website}
 
 \note{What is mBed}
 \note{Why we chose mBed}
