Adds some quick notes for ARM Cortex M0

--- a/tex/latex/hardware/cortex.tex
+++ b/tex/latex/hardware/cortex.tex
@@ -1,2 +1,10 @@
-\namedsection{Cortex M0+}{Pasat}
-fes
+\namedsection{ARM Cortex Processor}{}
+
+\subsection{ARM Cortex M0+}
+
+\subsection{ARM Cortex M0}
+
+\note{ARMv6-M}
+\note{No hardware divide}
+\note{No floating point unit}
+\note{32-bit architecture}
